@@ -1,3 +1,8 @@
+2009-09-24  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* nad/Makefile.am: add ntv2 and ignf testing if grid shift files
+	are available.
+
 2009-09-23  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Preparing for 4.7.0 release.
